--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--My CSS Files-->
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/media_queries.css" type="text/css" />
-    <link rel="stylesheet" href="assets/css/google_maps.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/google_search.css" type="text/css" />
 
     <!--This is for the EmailJS API browser integration for my modal contact forms-->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
@@ -323,7 +323,7 @@
     <!--My General JS Script-->
     <script src="assets/js/script.js"></script>
     <!--My JS Script for the Google Maps/Places API-->
-    <script src="assets/js/googlemaps.js"></script>
+    <script src="assets/js/googlesearch.js"></script>
     <!--My JS Script for my contact modal forms-->
     <script src="assets/js/sendemail.js"></script>
 
