fix: validation and syntax error for all files

--- a/locals.html
+++ b/locals.html
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="assets/css/local_search.css" type="text/css" />
 
     <!--This is for the EmailJS API browser integration for my modal contact forms-->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
-    <script type="text/javascript">
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+    <script>
         (function() {
             emailjs.init("user_5ufwrdpLONQqmdzUjcdEi");
         })();
@@ -212,7 +212,7 @@
                             <button type="submit" id="sendbutton-gen" class="btn btn-outline-secondary hvr-sweep-to-bottom send-btn">send</button>
 
                             <!--Reset Form Button-->
-                            <button type="reset" id="clear-form" class="btn btn-outline-secondary hvr-sweep-to-bottom reset-btn">Clear</button>
+                            <button type="reset" id="clear-form-gen" class="btn btn-outline-secondary hvr-sweep-to-bottom reset-btn">Clear</button>
                         </form>
                     </div>
 
@@ -235,7 +235,7 @@
                             <button type="submit" id="sendbutton-add" class="btn btn-outline-secondary hvr-sweep-to-bottom send-btn">send</button>
 
                             <!--Reset Form Button-->
-                            <button type="reset" id="clear-form" class="btn btn-outline-secondary hvr-sweep-to-bottom reset-btn">Clear</button>
+                            <button type="reset" id="clear-form-add" class="btn btn-outline-secondary hvr-sweep-to-bottom reset-btn">Clear</button>
                         </form>
                     </div>
                 </div>
