--- a/locals.html
+++ b/locals.html
@@ -55,7 +55,7 @@
                 </li>
                 <li class="nav-item">
                     <!--Nav links with hover.css class of hvr-sweep-to-bottom and hv-pulse-->
-                    <a class="nav-link hvr-sweep-to-bottom hvr-pulse contact-me" href="#" data-toggle="modal" data-target="#contact-modal">Contact</a>
+                    <a href="#contact-modal" class="nav-link hvr-sweep-to-bottom hvr-pulse contact-me" data-toggle="modal" data-target="#contact-modal">Contact</a>
                 </li>
 
                 <!--This list item is for my dark theme mode and is linked to my JS file. So if a user clicks on the list item it will change the body colour to a darker colour and also change the button from default to dark mode on and off if clicked again-->
@@ -195,50 +195,8 @@
                 </div>
 
                 <!--Modal Main body-->
-                <div class="modal-body">
+                <div class="modal-body"></div>
 
-                    <!--General Question Contact Form-->
-                    <div class="gen-question-form">
-                        <form id="gen-form">
-                            <input type="text" name="gen_fullname" id="gen_fullname" placeholder="Name" class="gen-input-fields" required><br>
-
-                            <input type="email" name="gen_emailaddress" id="gen_email" placeholder="Email" class="gen-input-fields" required><br>
-
-                            <input type="text" name="gen_subject" id="gen_subject" placeholder="Subject" class="gen-input-fields" required><br>
-
-                            <textarea id="gen_message" name="gen_message" placeholder="Message" rows="7" class="gen-input-fields" required></textarea><br>
-
-                            <!--Send Form Button-->
-                            <button type="submit" id="sendbutton-gen" class="btn btn-outline-secondary hvr-sweep-to-bottom send-btn">send</button>
-
-                            <!--Reset Form Button-->
-                            <button type="reset" id="clear-form-gen" class="btn btn-outline-secondary hvr-sweep-to-bottom reset-btn">Clear</button>
-                        </form>
-                    </div>
-
-                    <!--Add A Business Contact Form-->
-                    <div class="add-business-form">
-                        <form id="add-form">
-                            <input type="text" name="add_fullname" id="add_fullname" placeholder="Name" class="add-input-fields" required><br>
-
-                            <input type="text" name="add_number" id="add_number" placeholder="Contact Number" class="add-input-fields" required><br>
-
-                            <input type="email" name="add_emailaddress" id="add_email" placeholder="Email" class="add-input-fields" required><br>
-
-                            <input type="text" name="add_bussines_name" id="add_business_name" placeholder="Bussines Name" class="add-input-fields" required><br>
-
-                            <input type="text" name="add_bussines_address" id="add_business_address" placeholder="Bussines Address" class="add-input-fields" required><br>
-
-                            <textarea id="add_message" name="add_message" placeholder="Additional Information e.g. Business Description, Socail Media Links" rows="7" class="add-input-fields" required></textarea><br>
-
-                            <!--Send Form Button-->
-                            <button type="submit" id="sendbutton-add" class="btn btn-outline-secondary hvr-sweep-to-bottom send-btn">send</button>
-
-                            <!--Reset Form Button-->
-                            <button type="reset" id="clear-form-add" class="btn btn-outline-secondary hvr-sweep-to-bottom reset-btn">Clear</button>
-                        </form>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
@@ -255,8 +213,6 @@
     <script src="assets/js/script.js"></script>
     <!--My JS Script for my local search section-->
     <script src="assets/js/localsearch.js"></script>
-    <!--My JS Script for my contact modal forms-->
-    <script src="assets/js/sendemail.js"></script>
 
 </body>
 
