mod: added map event listener to close info window, added aria hidden to logo

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div id="gmaps-popup-content">
                 <table>
                     <tr class="popUp-table-row">
-                        <td id="popUp-icon" class="popUp-table-icon"><i id="defaultIcon" class="fas fa-tools"></i></td>
+                        <td id="popUp-icon" class="popUp-table-icon"><i id="defaultIcon" class="fas fa-tools" aria-hidden="true"></i></td>
                         <td id="popUp-name"></td>
                     </tr>
                     <tr id="popUp-address-row" class="popUp-table-row">
