--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
         <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <!--Nav links with hover.css class of hvr-sweep-to-bottom and hv-pulse-->
+                    <!--This is the google search nav links which is the homepage and with hover.css class of hvr-sweep-to-bottom and hv-pulse.-->
                     <a class="nav-link active-nav hvr-sweep-to-bottom hvr-pulse" href="index.html" id="google-search">Google</a>
                 </li>
                 <li class="nav-item">
-                    <!--Nav links with hover.css class of hvr-sweep-to-bottom and hv-pulse-->
+                    <!--This is the local search nav link with hover.css class of hvr-sweep-to-bottom and hv-pulse.-->
                     <a class="nav-link hvr-sweep-to-bottom hvr-pulse" href="locals.html" id="local-search">Local</a>
                 </li>
                 <li class="nav-item">
-                    <!--Nav links with hover.css class of hvr-sweep-to-bottom and hv-pulse-->
+                    <!--This nav link is for the contact modal and uses bootstrap data attributes to call upon it and has hover.css classes set.-->
                     <a href="#contact-modal" class="nav-link hvr-sweep-to-bottom hvr-pulse contact-me" data-toggle="modal" data-target="#contact-modal">Contact</a>
                 </li>
 
@@ -97,6 +97,8 @@
                     <div id="city-town-field">
                         <input id="city-town" placeholder="Please type a city or town" type="text" required />
                     </div>
+
+                    <!--Reset button that clears all search values-->
                     <input type="reset" onclick="resetSearch()" id="reset-btn">
                 </div>
 
@@ -106,6 +108,8 @@
                     <h6>choose a trade</h6>
 
                     <div class="row">
+
+                        <!--Left option column-->
                         <div class="col-5 col-lg-5 left-options">
                             <label for="electrician">electrician</label>
                             <input type="radio" id="electrician" name="tradesperson" value="electrician">
@@ -120,6 +124,7 @@
                             <br>
                         </div>
 
+                        <!--Right option column-->
                         <div class="col-6 col-lg-6 right-options">
                             <input type="radio" id="car_repair" name="tradesperson" value="car_repair">
                             <label for="car_repair">Mechanic</label><br>
@@ -233,7 +238,7 @@
     <!--Back to top button-->
     <a id="to-top-btn" class="hvr-sweep-to-bottom"><i class="fas fa-angle-double-up" aria-hidden="true"></i></a>
 
-    <!--Here I have created a modal contact form using bootstraps modal. I have used the code and then modified it to what i needed it to be and that is a two seperate contact forms. The first form is for general questions and the second form is for adding a business for my local search page. Both forms are linked to the EmailJS API but because i am using the free servie they are sharing the same email template.-->
+    <!--Here I have created a modal contact form using bootstraps modal. I have used the code and then modified it to what i needed it to be. The main body is located in a js file so that i can call upon it and access the modal on different pages. The modal body has two seperate contact forms. The first form is for general questions and the second form is for adding a business for my local search page. Both forms are linked to the EmailJS API but because i am using the free servie they are sharing the same email template.-->
 
     <!--My Modal Contact Forms-->
     <div class="modal fade" id="contact-modal">
