mod: added scroll to anchor when result card clicked in gmap html and js

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
         </div>
     </nav>
 
+    <a id="resultClickAnchor"></a>
+
     <!--This block of code below is for the main section of my html and i used the bootstrap grid sytem to create a fluid container, then a row and last the columns that i needed-->
     <main class="google-search">
         <div class="container-fluid">
@@ -140,7 +142,6 @@
                 </div>
             </div>
         </div>
-
 
         <!--Here i created another bootstrap fluid container, then a row and then a column to contain the embedded google map for the marker results and info window to display on-->
         <div class="container-fluid gmaps-con">
