mod: local search media css reduced and code improvements done

--- a/locals.html
+++ b/locals.html
@@ -13,9 +13,10 @@
     <!--Hover.css v2.3.1 CDN-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" />
     <!--My CSS Files-->
+    <link rel="stylesheet" href="assets/css/local_search.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/media_queries.css" type="text/css" />
-    <link rel="stylesheet" href="assets/css/local_search.css" type="text/css" />
+
 
     <!--This is for the EmailJS API browser integration for my modal contact forms-->
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
@@ -83,7 +84,7 @@
             <div class="row">
 
                 <!--Bootstrap empty column-->
-                <div class="col-12 col-lg-2 empty-space-local"></div>
+                <div class="col-lg-2 empty-space-local"></div>
 
                 <!--This block of code is for the select a trade search which contain three boostrap columns-->
                 <div class="col-12 col-lg-8 choose-trade-local">
@@ -123,7 +124,7 @@
                 </div>
 
                 <!--Bootstrap empty column-->
-                <div class="col-12 col-lg-2 empty-space-local"></div>
+                <div class="col-lg-2 empty-space-local"></div>
 
             </div>
         </div>
