mod: final checks done on all file and a few comments changed

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!--This is for the EmailJS API browser integration for my modal contact forms-->
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
-    <!--My JS Script for my contact modal forms-->
+    <!--My JS Script for my contact modal forms, this is my emailjs User ID-->
     <script>
         (function() {
             emailjs.init("user_5ufwrdpLONQqmdzUjcdEi");
@@ -136,7 +136,7 @@
                             <label for="hardware_store">Hardware Store</label><br>
                         </div>
 
-                        <!--Anchor link for when a user clicks on a result card-->
+                        <!--Anchor link for when a user clicks on a result card, the page will smooth scroll to this position-->
                         <a id="resultClickAnchor"></a>
 
                     </div>
