--- a/locals.html
+++ b/locals.html
@@ -20,7 +20,7 @@
 
     <!--This is for the EmailJS API browser integration for my modal contact forms-->
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
-    <!--My JS Script for my contact modal forms-->
+    <!--My JS Script for my contact modal forms, this is my emailjs User ID-->
     <script>
         (function() {
             emailjs.init("user_5ufwrdpLONQqmdzUjcdEi");
@@ -75,7 +75,7 @@
         <!--This block of code is for the important notice banner-->
         <div class="row no-gutters">
             <div class="col-12 col-lg-12 notice-banner">
-                <h5 class="notice-message">Important Notice: Limited Search Availability And Dummy Data Provided</h5>
+                <h5 class="notice-message">Important Notice: Limited Search Availability Fixed To St Albans And Dummy Data Provided</h5>
             </div>
         </div>
 
