fix: dark mode btn text, toggle and hover

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                 <!--This list item is for my dark theme mode and is linked to my JS file. So if a user clicks on the list item it will change the body colour to a darker colour and also change the button from default to dark mode on and off if clicked again-->
                 <li class="nav-item">
-                    <a class="nav-link hvr-sweep-to-bottom" id="dark-btn" onclick="darkTheme()" href="#">Dark Mode<br> On</a>
+                    <a class="nav-link" id="dark-btn" onclick="darkTheme()" href="#">Dark Mode<br> Off</a>
                 </li>
 
             </ul>
